--- a/views/layouts/website.ejs
+++ b/views/layouts/website.ejs
@@ -229,5 +229,8 @@
     });
   </script>
   <% if (typeof script !== 'undefined') { %><%- script %><% } %>
+
+  <!-- WordPress-like Elements Frontend Script -->
+  <script src="/js/wp-elements-frontend.js"></script>
 </body>
 </html>
