--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="/css/demo-page.css">
   <link rel="stylesheet" href="/css/page-builder.css">
   <link rel="stylesheet" href="/css/website-builder-demo.css">
+  <link rel="stylesheet" href="/css/wp-elements.css">
+  <link rel="stylesheet" href="/css/ai-website-editor.css">
   <link rel="stylesheet" href="/css/package-calculator.css">
   <!-- Favicon -->
   <link rel="icon" href="/images/favicon.ico">
